--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -1,29 +1,42 @@
 server:
   port: 8080
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
+
+springdoc:
+  swagger-ui:
+    enabled: true
+    urls:
+      - name: employee-service
+        url: /v3/api-docs/employee
+      - name: inventory-service
+        url: /v3/api-docs/inventory
+  api-docs:
+    enabled: true
+
+
 spring:
   application:
     name: api-gateway
 
   cloud:
     gateway:
-      server:
-        webflux:
-          routes:
-            - id: employee-service
-              uri: lb://employee-service
-              predicates:
-                - Path=/employee-service/**  # Match all paths under /employee-service
-              filters:
-                - name: RewritePath
-                  args:
-                    regexp: '/employee-service(?<remaining>/.*)'
-                    replacement: '${remaining}'  # Remove /employee-service prefix
-                - name: CircuitBreaker
-                  args:
-                    name: employeeCircuitBreaker
-                    fallbackUri: forward:/fallback
-
+      routes:
+        - id: employee-service
+          uri: lb://employee-service
+          predicates:
+            - Path=/employee-service/**, /v3/api-docs/employee, /swagger-ui/**
+          filters:
+            - RewritePath=/employee-service/(?<segment>.*), /${segment}
+            - name: CircuitBreaker
+              args:
+                name: employeeCircuitBreaker
+                fallbackUri: forward:/fallback
 
 resilience4j:
   circuitbreaker:
