--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -7,9 +7,10 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/rnzmndz/config.git
-          # optional
+          uri: https://github.com/rnzmndz/microservice-component.git
+          search-paths: config-repo
           default-label: main
+          clone-on-start: true
 
 server:
   port: 8888
