--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -1,14 +1,18 @@
 spring:
   application:
     name: config-service
+  security:
+    user:
+      name: admin
+      password: admin
   profiles:
     active: git
   cloud:
     config:
       server:
         git:
-          uri: https://github.com/rnzmndz/microservice-component.git
-          search-paths: config-repo
+          uri: https://github.com/rnzmndz/config.git
+#          search-paths: config-repo // use this when you use the link of microservice-component
           default-label: main
           clone-on-start: true
 
