--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,7 @@ services:
     depends_on:
       - config-service
       - eureka-server
+      - keycloak
 
   # Auth Service
   auth-service:
@@ -66,7 +67,7 @@ services:
     build:
       context: ../employee-service
     ports:
-      - "8082:8080"  # Mapped to 8082 on host to avoid conflicts
+      - "8082:8082"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
@@ -78,6 +79,7 @@ services:
       - config-service
       - eureka-server
       - postgres
+      - keycloak
 
   # PostgreSQL Database
   postgres:
