--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -24,5 +24,9 @@ COPY --from=build /app/target/api-gateway-*.jar app.jar
 # Expose the default Spring Boot port
 EXPOSE 8080
 
+# Health check
+HEALTHCHECK --start-period=30s --interval=30s --timeout=3s \
+  CMD curl -f http://localhost:8080/actuator/health || exit 1
+
 # Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
