--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -25,7 +25,7 @@ COPY --from=build /app/target/config-service-*.jar app.jar
 EXPOSE 8888
 
 # Health check (uses Spring Boot Actuator)
-HEALTHCHECK --interval=30s --timeout=3s \
+HEALTHCHECK --start-period=30s --interval=30s --timeout=3s \
   CMD curl -f http://localhost:8888/actuator/health || exit 1
 
 # Run the application
